# Aetherweave-ENGINE

./: README.md
aetherweave/: .env.example  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  turbo.json
aetherweave/apps/backend/: Dockerfile  __init__.py  alembic.ini  main.py
aetherweave/apps/backend/agents/: __init__.py  architect_agent.py  critic_agent.py  debater_agent.py  futurist_agent.py  state.py  workflow.py
aetherweave/apps/backend/alembic/: env.py  script.py.mako
aetherweave/apps/backend/alembic/versions/: 0001_initial.py
aetherweave/apps/backend/api/: __init__.py
aetherweave/apps/backend/api/v1/: status.py  (+4 more)
aetherweave/apps/backend/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  neo4j.py  pubsub.py  redis.py  ws_manager.py
aetherweave/apps/backend/models/: __init__.py  models.py
aetherweave/apps/backend/schemas/: analytics.py
aetherweave/apps/backend/services/: __init__.py  analytics_service.py  architecture_service.py  enhanced_evolution_service.py  evolution_service.py  symbiosis_service.py
aetherweave/apps/backend/worker/: __init__.py  beat_schedule.py  celery_app.py  tasks.py
aetherweave/apps/frontend/: Dockerfile  next.config.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
aetherweave/apps/frontend/app/: globals.css  layout.tsx  page.tsx
aetherweave/apps/frontend/components/: error-boundary.tsx  providers.tsx
aetherweave/apps/frontend/hooks/: use-analytics.ts  use-api.ts  use-evolution.ts  use-node-positions.ts  use-toast.ts
aetherweave/apps/frontend/lib/: utils.ts
aetherweave/apps/frontend/store/: loom-store.ts
(+19 files in other folders)
